# mailman-mailarchive

./: .gitignore  README.md  pyproject.toml
src/mailman_mailarchive/: __init__.py  archiver.py
